--- a/pages/index.css
+++ b/pages/index.css
@@ -6,6 +6,7 @@
 @import url('../blocks/hero.css');
 @import url('../blocks/content.css');
 @import url('../blocks/about.css');
+@import url('../blocks/hire.css');
 
 
 html {
