--- a/pages/index.css
+++ b/pages/index.css
@@ -7,6 +7,7 @@
 @import url('../blocks/content.css');
 @import url('../blocks/about.css');
 @import url('../blocks/hire.css');
+@import url('../blocks/teams.css');
 
 
 html {
