--- a/pages/index.css
+++ b/pages/index.css
@@ -8,6 +8,7 @@
 @import url('../blocks/about.css');
 @import url('../blocks/hire.css');
 @import url('../blocks/teams.css');
+@import url('../blocks/companies.css');
 
 
 html {
