--- a/pages/index.css
+++ b/pages/index.css
@@ -9,6 +9,7 @@
 @import url('../blocks/hire.css');
 @import url('../blocks/teams.css');
 @import url('../blocks/companies.css');
+@import url('../blocks/services.css');
 
 
 html {
