--- a/pages/index.css
+++ b/pages/index.css
@@ -11,6 +11,7 @@
 @import url('../blocks/companies.css');
 @import url('../blocks/services.css');
 @import url('../blocks/gallery.css');
+@import url('../blocks/blog.css');
 
 
 html {
@@ -45,4 +46,29 @@ p {
     font-size: 16px;
     color: #FFF;
     margin: 0;  
+}
+
+button {
+    font-family: 'Kanit', Arial, sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    letter-spacing: .43em;
+    text-transform: uppercase;
+    color: #FFF;
+    background: none;
+    border: solid 1px #6D7D7D;
+    box-shadow: none;
+    cursor: pointer;
+    transition: background-color 0.2s ease-in-out;
+    transition: scale 0.2s ease-in-out;
+}
+
+button:hover {
+    background-color: #6D7D7D40;
+    scale: 1.05;
+}
+
+button:active {
+    background: none;
+    scale: 1;
 }
