--- a/blocks/blog.css
+++ b/blocks/blog.css
@@ -3,4 +3,12 @@
     flex-direction: column;
     align-items: center;
     padding: 100px 0 50px;
+    width: 100%;
+}
+
+.blog__articles {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    margin-top: 35px;
 }
