--- a/pages/index.css
+++ b/pages/index.css
@@ -12,6 +12,7 @@
 @import url('../blocks/services.css');
 @import url('../blocks/gallery.css');
 @import url('../blocks/blog.css');
+@import url('../blocks/article.css');
 
 
 html {
