--- a/pages/index.css
+++ b/pages/index.css
@@ -13,6 +13,7 @@
 @import url('../blocks/gallery.css');
 @import url('../blocks/blog.css');
 @import url('../blocks/article.css');
+@import url('../blocks/newsletter.css');
 
 
 html {
