--- a/pages/index.css
+++ b/pages/index.css
@@ -15,6 +15,7 @@
 @import url('../blocks/article.css');
 @import url('../blocks/newsletter.css');
 @import url('../blocks/contacts.css');
+@import url('../blocks/footer.css');
 
 
 html {
